# ids-tcp_capture

./: .gitignore  CMakeLists.txt  main.cpp
autoencoders/: train_model.py
dissection/: dissection.h
dissection/ethernet/: ethernet_dissect.h
dissection/tcp/: tcp_dissect.h
filters/: filters.h
loggers/: console_logger.h  file_logger.h  logger.h
packets/: packet_headers.h  process_packets.h
protocols/: protocol.h
protocols/arp/: arp.h
protocols/http/: http.h
protocols/ipv4/: ipv4.h
protocols/ipv6/: ipv6.h
protocols/rarp/: rarp.h
protocols/snmp/: snmp.h
protocols/tcp/: tcp.h
protocols/udp/: udp.h
utils/: iohelper.h
